--- a/pom.xml
+++ b/pom.xml
@@ -10,12 +10,12 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.compiler.source>1.6</maven.compiler.source>
 		<maven.compiler.target>1.6</maven.compiler.target>
-		<spring.version>3.2.0.M2</spring.version>
-		<spring.mongodb.version>1.1.0.M1</spring.mongodb.version>
+		<spring.version>3.2.2.RELEASE</spring.version>
+		<spring.mongodb.version>1.2.1.RELEASE</spring.mongodb.version>
 		<aspectj.version>1.6.12</aspectj.version>
 		<slf4j.version>1.6.4</slf4j.version>
 		<hibernate.version>4.1.4.Final</hibernate.version>
-		<spring.data.jpa>1.1.0.RELEASE</spring.data.jpa>
+		<spring.data.jpa>1.3.0.RELEASE</spring.data.jpa>
 	</properties>
 
 	<repositories>
